made draggable inventory

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="app.js"></script>
 </head>
 <body>
-    <h1>TypeScript HTML App!</h1>
+    <h1>Water, Water, everywhere</h1>
 
     <div id="content"></div>
 </body>
