tweaked get slot

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="app.js"></script>
 </head>
 <body>
-    <h1>Water, Water, everywhere</h1>
+    <font face="BiroScript">Water, Water, everywhere</font>
 
     <div id="content"></div>
 </body>
