--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="app.js"></script>
 </head>
 <body>
-    <font face="BiroScript">Water, Water, everywhere</font>
-
+    <font face="biro_script_reducedregular">Water, Water, everywhere</font>
+    Hello
     <div id="content"></div>
 </body>
 </html>
